# fiction-readers-app

./: .gitignore  README.md  google_api.ipynb  pyproject.toml
_server/: .env.example  db.sqlite3
_server/_server/: settings.py  urls.py
_server/core/: models.py  urls.py  vector_search.py  views.py
_server/core/management/commands/: index_books.py  load_db.py
_server/core/migrations/: 0001_initial.py  0002_remove_authors_book_id_remove_genres_book_id_and_more.py  0002_rename_authors_author_rename_books_book_and_more.py  0003_alter_books_reviews.py  0003_rename_reviews_book_review.py  0004_alter_reviews_rating.py  0004_remove_book_review_review_book_alter_readerlog_book.py  0005_remove_readerlog_book_remove_review_book_and_more.py  0006_readerlog_status.py  0007_alter_readerlog_user.py  0008_alter_author_author_name_alter_book_title_and_more.py  0009_alter_book_title_alter_genre_genre_and_more.py  0010_alter_readerlog_status.py  0011_bookindex.py  0012_bookindex_genre.py  0013_alter_book_options.py
_server/landing/: apps.py  urls.py  views.py
_server/landing/templates/landing/: landing.html
_server/registration/: urls.py  views.py
_server/registration/templates/landing/: denied.html
client/: package-lock.json  package.json
client/src/: App.jsx  Home.jsx  main.jsx
client/src/components/forms/: BookAdd.jsx  BookInfo.css  (+9 more)
data/: Book.csv  Books.csv  Genre.csv  Publisher.csv  ReaderLog.csv  ReaderLogs.csv  Review.csv  Reviews.csv  authors.csv  books.csv  publishers.csv  reviews.csv  users.json
etl/: README.md  fiction.ipynb  key_example.py  reviews.ipynb
(+20 files in other folders)
