[tool.poetry]
name = "fiction-readers"
version = "0.1.0"
description = ""
authors = ["Joseph Ditton <jditton.atomic@gmail.com>",
            "Karen Fisher <karen@karencfisher.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pandas = "^2.2.3"
openai = "^1.54.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
